@@ -1,3 +1,7 @@
+Ver.
+----------------------------
+- Feature - docker volume mapping for Logs (#11)
+
 Ver. 1.4.8 - 2021-02-16
 ----------------------------
 - Feature - Update of Social Media Module (#7)
